--- a/Main/View/MainView.xaml
+++ b/Main/View/MainView.xaml
@@ -3,12 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Main"
         xmlns:model="clr-namespace:Main.Model"
         xmlns:viewmodel="clr-namespace:Main.ViewModel"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
-        Title="Visual Ternera - Main" Height="720" Width="1260">
+        Title="Visual Ternera - Main"
+        Height="720"
+        Width="1260">
   <Window.Resources>
     <model:DateTimeToBrushConverter x:Key="DateColorConverter" />
     <model:StatusToBrushConverter x:Key="StatusColorConverter" />
@@ -27,22 +29,16 @@
         <RowDefinition Height="*" />
       </Grid.RowDefinitions>
 
-      <Label Content="Acciones" Grid.Row="0" />
+      <TextBlock Text="Acciones" Grid.Row="0" FontWeight="DemiBold" FontSize="26"/>
 
       <ItemsControl Grid.Row="1" VerticalAlignment="Center">
-        <ItemsControl.ItemContainerStyle>
-          <Style>
-            <Setter Property="FrameworkElement.Margin" Value="10" />
-          </Style>
-        </ItemsControl.ItemContainerStyle>
-
-        <Button Command="{Binding OpenEditor}" Content="{Binding EditorTitle}" />
-        <Button Command="{Binding OpenComparator}" Content="{Binding ComparatorTitle}" />
-        <Button Command="{Binding OpenCohere}" Content="{Binding CohereTitle}" />
+        <Button Command="{Binding OpenEditor}" Content="{Binding EditorTitle}" Margin="5" />
+                <Button Command="{Binding OpenComparator}" Content="{Binding ComparatorTitle}" Margin="5" />
+                <Button Command="{Binding OpenCohere}" Content="{Binding CohereTitle}" Margin="5" />
       </ItemsControl>
     </Grid>
 
-    <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,0,0,0" Background="{x:Null}" />
+    <Border Grid.Column="1" BorderBrush="White" BorderThickness="2,0,0,0" Background="{x:Null}" />
 
     <Grid x:Name="StateGrid" Grid.Column="1" Margin="15">
       <Grid.RowDefinitions>
@@ -51,7 +47,7 @@
         <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
 
-      <Label Content="Estado" Grid.Row="0" />
+      <Label Content="Estado" Grid.Row="0" FontWeight="DemiBold" FontSize="26" />
 
       <StackPanel Grid.Row="1" Margin="0,45,0,45" VerticalAlignment="Center">
         <DataGrid ItemsSource="{Binding ClientsList}"
@@ -81,13 +77,13 @@
       </StackPanel>
 
       <DockPanel Grid.Row="2" LastChildFill="false" VerticalAlignment="Bottom">
-        <TextBlock DockPanel.Dock="Left" FontWeight="Bold" Text="{Binding Tag.Tag, StringFormat='Versión: \{0\}'}" />
+        <TextBlock DockPanel.Dock="Left" FontWeight="DemiBold" Text="{Binding Tag.Tag, StringFormat='Versión: \{0\}'}" />
         <TextBlock DockPanel.Dock="Right">
-                    <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"
-                        NavigateUri="https://github.com/runfo-sa/visual-ternera-servicio/commit/9a0e8d78e9b52eef7d1f50838ee7008cde2b0168">
-                        <TextBlock Text="{Binding Tag.Message}" />
-                    </Hyperlink>
-                </TextBlock>
+          <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"
+                NavigateUri="https://github.com/runfo-sa/visual-ternera-servicio/commit/9a0e8d78e9b52eef7d1f50838ee7008cde2b0168">
+            <TextBlock Text="{Binding Tag.Message}" FontWeight="DemiBold" />
+          </Hyperlink>
+        </TextBlock>
       </DockPanel>
     </Grid>
   </Grid>
