--- a/Editor/View/Editor.xaml
+++ b/Editor/View/Editor.xaml
@@ -1,175 +1,140 @@
-<UserControl x:Class="Editor.Editor"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Editor"
-             xmlns:view="clr-namespace:Editor.View"
-             xmlns:model="clr-namespace:Editor.Model"
-             xmlns:viewmodel="clr-namespace:Editor.ViewModel"
-             xmlns:avalon="http://icsharpcode.net/sharpdevelop/avalonedit"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=viewmodel:EditorViewModel}"
-             d:DesignHeight="720"
-             d:DesignWidth="1260">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-    </Grid.RowDefinitions>
+﻿<UserControl
+    x:Class="Editor.Editor"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:view="clr-namespace:Editor.View"
+    xmlns:model="clr-namespace:Editor.Model"
+    xmlns:viewmodel="clr-namespace:Editor.ViewModel"
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewmodel:EditorViewModel}"
+    d:DesignHeight="720"
+    d:DesignWidth="1260">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="Auto" />
+            <RowDefinition
+                Height="Auto" />
+            <RowDefinition
+                Height="*" />
+        </Grid.RowDefinitions>
 
-    <Menu Grid.Row="0">
-      <MenuItem Header="_Archivos"></MenuItem>
-      <MenuItem Header="_Editar"></MenuItem>
-      <MenuItem Header="_Ver"></MenuItem>
-      <MenuItem Header="_Herramientas"></MenuItem>
-      <MenuItem Header="_Git"></MenuItem>
-      <MenuItem Header="_Ayuda"></MenuItem>
-    </Menu>
+        <Menu
+            Grid.Row="0">
+            <MenuItem
+                Header="_Archivos">
+                <MenuItem
+                    Header="_Nuevo" />
+                <MenuItem
+                    Header="_Guardar" />
+                <MenuItem
+                    Header="_Guardar como..." />
+                <MenuItem
+                    Header="_Ajustes" />
+                <MenuItem
+                    Header="_Salir" />
+            </MenuItem>
+            <MenuItem
+                Header="_Herramientas">
+                <MenuItem
+                    Header="_Comparar Etiquetas" />
+                <MenuItem
+                    Header="_Cohesionar Etiquetas" />
+                <MenuItem
+                    Header="_Preview on save"
+                    IsCheckable="True" />
+            </MenuItem>
+            <MenuItem
+                Header="_Git">
+                <MenuItem
+                    Header="_Actualizar repositorio local" />
+                <MenuItem
+                    Header="_Publicar cambios" />
+            </MenuItem>
+            <MenuItem
+                Header="_?">
+                <MenuItem
+                    Header="_Ayuda" />
+                <MenuItem
+                    Header="_Acerca de" />
+            </MenuItem>
+        </Menu>
 
-    <!-- ToolBar -->
-    <Border Grid.Row="1"
-            BorderThickness="1"
-            BorderBrush="#AF8260">
-      <DockPanel LastChildFill="False"
-                 Margin="10,0,10,0">
-        <ToolBarTray IsLocked="True"
-                     DockPanel.Dock="Left">
-          <ToolBar>
-            <Button x:Name="newButton"
-                    Content="New"
-                    Command="{Binding NewFile}" />
-            <Button x:Name="openButton"
-                    Content="Open"
-                    Command="{Binding OpenFile}" />
-            <Button x:Name="saveButton"
-                    Content="Save" Command="{Binding SaveFile}"
-                    CommandParameter="{Binding ElementName=tabControl, Path=SelectedItem}" />
-            <Button x:Name="saveAllButton"
-                    Content="Save all"
-                    Command="{Binding SaveAllFiles}" />
-          </ToolBar>
-        </ToolBarTray>
+        <view:ToolBar
+            Grid.Row="1" />
 
-        <ToolBarTray IsLocked="True"
-                     DockPanel.Dock="Right">
-          <ToolBar>
-            <Button x:Name="previewButton"
-                    Content="Preview"
-                    Command="{Binding PreviewLabel}"
-                    CommandParameter="{Binding ElementName=tabControl, Path=SelectedItem}" />
-            <Button x:Name="printButton"
-                    Content="Imprimir" />
-            <ComboBox>
-              <ComboBoxItem Content="TODO!"
-                            IsSelected="True" />
-            </ComboBox>
-          </ToolBar>
-        </ToolBarTray>
-      </DockPanel>
-    </Border>
+        <Grid
+            Margin="10"
+            Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="20*" />
+                <ColumnDefinition
+                    Width="10" />
+                <ColumnDefinition
+                    Width="60*" />
+                <ColumnDefinition
+                    Width="10" />
+                <ColumnDefinition
+                    Width="30*" />
+            </Grid.ColumnDefinitions>
 
-    <Grid Margin="10"
-          Grid.Row="2">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="15*" />
-        <ColumnDefinition Width="10" />
-        <ColumnDefinition Width="60*" />
-        <ColumnDefinition Width="10" />
-        <ColumnDefinition Width="25*" />
-      </Grid.ColumnDefinitions>
+            <!-- TreeView -->
+            <DockPanel
+                LastChildFill="True">
+                <TreeView
+                    x:Name="treeView"
+                    ItemsSource="{Binding RootDir}"
+                    FontSize="14">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger
+                            EventName="SelectedItemChanged">
+                            <i:InvokeCommandAction
+                                Command="{Binding OpenSelected}"
+                                CommandParameter="{Binding ElementName=treeView, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
 
-      <!-- TreeView -->
-      <DockPanel LastChildFill="True">
-        <Label Content="Arbol de Etiquetas"
-               DockPanel.Dock="Top"
-               FontWeight="DemiBold" />
-        <TreeView ItemsSource="{Binding RootDir}">
-          <TreeView.Resources>
-            <HierarchicalDataTemplate DataType="{x:Type model:LabelDir}"
-                                      ItemsSource="{Binding Items}">
-              <TextBlock Text="{Binding Name}" />
-            </HierarchicalDataTemplate>
+                    <TreeView.Resources>
+                        <HierarchicalDataTemplate
+                            DataType="{x:Type model:LabelDir}"
+                            ItemsSource="{Binding Items}">
+                            <TextBlock
+                                Text="{Binding Name}"
+                                FontWeight="DemiBold" />
+                        </HierarchicalDataTemplate>
 
-            <DataTemplate DataType="{x:Type model:LabelFile}">
-              <TextBlock Text="{Binding Name}"
-                         Margin="2">
-                <TextBlock.InputBindings>
-                  <MouseBinding MouseAction="LeftCLick"
-                                Command="{Binding DataContext.OpenSelected, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                CommandParameter="{Binding}" />
-                </TextBlock.InputBindings>
-              </TextBlock>
-            </DataTemplate>
-
-            <Style TargetType="TreeViewItem">
-              <Setter Property="Focusable"
-                      Value="False" />
-              <Style.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="True">
-                  <Setter Property="Background"
-                          Value="#803D3B" />
-                </Trigger>
-              </Style.Triggers>
-            </Style>
-          </TreeView.Resources>
-        </TreeView>
-      </DockPanel>
-
-      <GridSplitter Grid.Column="1"
-                    Background="Transparent"
-                    HorizontalAlignment="Stretch" />
-
-      <TabControl Grid.Column="2"
-                  x:Name="tabControl"
-                  ItemsSource="{Binding Tabs}"
-                  SelectedIndex="{Binding SelectedTab}">
-        <TabControl.ItemTemplate>
-          <DataTemplate DataType="{x:Type model:TabItem}">
-            <DockPanel>
-              <TextBlock Text="{Binding Header}"
-                         DockPanel.Dock="Left"
-                         TextAlignment="Center"
-                         VerticalAlignment="Center">
-                <TextBlock.InputBindings>
-                  <MouseBinding MouseAction="MiddleClick"
-                                Command="{Binding DataContext.CloseTab, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                CommandParameter="{Binding}" />
-                </TextBlock.InputBindings>
-              </TextBlock>
-              <Separator Opacity="0"
-                         Width="5" />
-              <Button Content="x"
-                      DockPanel.Dock="Right"
-                      Background="Transparent"
-                      BorderBrush="Transparent"
-                      Command="{Binding DataContext.CloseTab, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                      CommandParameter="{Binding}" />
+                        <DataTemplate
+                            DataType="{x:Type model:LabelFile}">
+                            <TextBlock
+                                HorizontalAlignment="Stretch"
+                                Text="{Binding Name}" />
+                        </DataTemplate>
+                    </TreeView.Resources>
+                </TreeView>
             </DockPanel>
-          </DataTemplate>
-        </TabControl.ItemTemplate>
 
-        <TabControl.ContentTemplate>
-          <DataTemplate DataType="{x:Type model:TabItem}">
-            <avalon:TextEditor WordWrap="True"
-                               ShowLineNumbers="True"
-                               Document="{Binding EditorBody}" />
-          </DataTemplate>
-        </TabControl.ContentTemplate>
-      </TabControl>
+            <GridSplitter
+                Grid.Column="1"
+                Background="{x:Null}"
+                HorizontalAlignment="Stretch" />
 
-      <GridSplitter Grid.Column="3"
-                    Background="Transparent"
-                    HorizontalAlignment="Stretch" />
+            <view:TextEditor
+                Grid.Column="2" />
 
-      <Border Grid.Column="4"
-              BorderThickness="1"
-              BorderBrush="#AF8260"
-              Background="Transparent">
-        <view:Preview Margin="5" />
-      </Border>
+            <GridSplitter
+                Grid.Column="3"
+                Background="{x:Null}"
+                HorizontalAlignment="Stretch" />
+
+            <GroupBox
+                Grid.Column="4">
+                <view:Preview
+                    DataContext="{Binding PreviewViewModel}" />
+            </GroupBox>
+        </Grid>
     </Grid>
-  </Grid>
 </UserControl>
