--- a/Editor/View/Preview.xaml
+++ b/Editor/View/Preview.xaml
@@ -1,88 +1,183 @@
-﻿<UserControl x:Class="Editor.View.Preview"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewmodel="clr-namespace:Editor.ViewModel"
-             mc:Ignorable="d"
-             Background="LightGray"
-             d:DataContext="{d:DesignInstance Type=viewmodel:EditorViewModel}"
-             d:DesignHeight="450"
-             d:DesignWidth="400">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="Auto" />
-    </Grid.RowDefinitions>
+﻿<UserControl
+    x:Class="Editor.View.Preview"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:viewmodel="clr-namespace:Editor.ViewModel"
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewmodel:PreviewViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="400">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="Auto" />
+            <RowDefinition
+                Height="*" />
+            <RowDefinition
+                Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <DockPanel LastChildFill="False"
+        <DockPanel
+            LastChildFill="False"
             Margin="5">
-        <TextBlock Text="Preview"
+            <TextBlock
+                Text="Preview"
+                FontWeight="DemiBold"
+                FontSize="22"
                 VerticalAlignment="Center" />
-        <Separator Width="40"
-                Opacity="0" />
-
-        <Button Content="Zoom-In"
-            Command="{Binding ZoomIn}" />
-        <Separator Width="10"
-                Opacity="0" />
-        <TextBox Text="{Binding PreviewSizePercentage, StringFormat='\{0\}%'}" />
-        <Separator Width="10"
-                Opacity="0" />
-        <Button Content="Zoom-Out"
-            Command="{Binding ZoomOut}" />
-        <Separator Width="20"
-                Opacity="0" />
-
-        <Button Content="↻"
-            Command="{Binding RotateRight}"
-            DockPanel.Dock="Right" />
-        <Separator Width="10"
+            <Button
+                Content="↻"
+                Command="{Binding RotateRight}"
+                DockPanel.Dock="Right"
+                FontWeight="DemiBold"
+                FontFamily="16"
+                VerticalAlignment="Center" />
+            <Separator
+                Width="10"
                 Opacity="0"
                 DockPanel.Dock="Right" />
-        <TextBox Text="{Binding PreviewAngle, StringFormat='\{0\}°'}"
-            IsReadOnly="True"
-            MinWidth="30"
-            DockPanel.Dock="Right" />
-        <Separator Width="10"
-                Opacity="0"
-                DockPanel.Dock="Right" />
-        <Button Content="↺"
-            Command="{Binding RotateLeft}"
-            DockPanel.Dock="Right" />
-    </DockPanel>
-      
-      
-    <Border Grid.Row="1"
-        Margin="0,5,0,5"
-        BorderBrush="Gray"
-        BorderThickness="1">
-        <Image Source="{Binding PreviewImage}" SnapsToDevicePixels="True" />
-    </Border>
+            <Button
+                Content="↺"
+                Command="{Binding RotateLeft}"
+                FontWeight="DemiBold"
+                FontFamily="16"
+                DockPanel.Dock="Right"
+                VerticalAlignment="Center" />
+            <Rectangle
+                DockPanel.Dock="Right"
+                VerticalAlignment="Stretch"
+                Width="1"
+                Margin="9,6,9,6"
+                Stroke="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}" />
+            <ComboBox
+                DockPanel.Dock="Right"
+                VerticalAlignment="Center"
+                MaxWidth="60">
+                <ComboBoxItem
+                    Selector.IsSelected="True">
+                    <TextBlock
+                        Text="100%" />
+                </ComboBoxItem>
+            </ComboBox>
+            <Rectangle
+                DockPanel.Dock="Right"
+                VerticalAlignment="Stretch"
+                Width="1"
+                Margin="9,6,9,6"
+                Stroke="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}" />
+            <Button
+                DockPanel.Dock="Right"
+                Command="{Binding ZoomOut}"
+                FontWeight="DemiBold"
+                FontFamily="16"
+                VerticalAlignment="Center">
+                <Image
+                    Margin="2,5"
+                    Width="16">
+                    <Image.Source>
+                        <BitmapImage
+                            UriSource="/Editor;component/Resources/zoom-out.png" />
+                    </Image.Source>
+                    <Image.Style>
+                        <Style
+                            TargetType="Image">
+                            <Style.Triggers>
+                                <Trigger
+                                    Property="IsEnabled"
+                                    Value="False">
+                                    <Setter
+                                        Property="Opacity"
+                                        Value="0.5" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+            </Button>
+            <Separator
+                DockPanel.Dock="Right"
+                Width="10"
+                Opacity="0" />
+            <Button
+                DockPanel.Dock="Right"
+                Command="{Binding ZoomIn}"
+                FontWeight="DemiBold"
+                FontFamily="16"
+                VerticalAlignment="Center">
+                <Image
+                    Margin="2,5"
+                    Width="16">
+                    <Image.Source>
+                        <BitmapImage
+                            UriSource="/Editor;component/Resources/zoom-in.png" />
+                    </Image.Source>
+                    <Image.Style>
+                        <Style
+                            TargetType="Image">
+                            <Style.Triggers>
+                                <Trigger
+                                    Property="IsEnabled"
+                                    Value="False">
+                                    <Setter
+                                        Property="Opacity"
+                                        Value="0.5" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+            </Button>
+        </DockPanel>
 
-    <DockPanel Margin="5"
-               Grid.Row="2"
-               LastChildFill="False">
-      <TextBlock Text="DPI:"
-                 VerticalAlignment="Center" />
-      <Separator Width="20"
-                 Opacity="0" />
-      <ComboBox ItemsSource="{Binding DpiList}"
+        <Border
+            Grid.Row="1"
+            Margin="5"
+            BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
+            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+            BorderThickness="2">
+            <Image
+                Source="{Binding PreviewImage}"
+                SnapsToDevicePixels="True" />
+        </Border>
+
+        <DockPanel
+            Margin="5"
+            Grid.Row="2"
+            LastChildFill="False">
+            <TextBlock
+                Text="DPI:"
+                VerticalAlignment="Center"
+                FontWeight="DemiBold"
+                FontSize="14" />
+            <Separator
+                Width="10"
+                Opacity="0" />
+            <ComboBox
+                ItemsSource="{Binding DpiList}"
                 DisplayMemberPath="Display"
                 SelectedValuePath="Value"
-                SelectedIndex="2" />
+                SelectedIndex="2"
+                FontSize="13" />
 
-      <ComboBox DockPanel.Dock="Right"
+            <ComboBox
+                DockPanel.Dock="Right"
                 ItemsSource="{Binding SizeList}"
                 DisplayMemberPath="Display"
-                SelectedValuePath="Value" />
-      <Separator Width="20"
-                 Opacity="0"
-                 DockPanel.Dock="Right" />
-      <TextBlock Text="Size:"
-                 DockPanel.Dock="Right"
-                 VerticalAlignment="Center" />
-    </DockPanel>
-  </Grid>
+                SelectedValuePath="Value"
+                FontSize="13" />
+            <Separator
+                Width="10"
+                Opacity="0"
+                DockPanel.Dock="Right" />
+            <TextBlock
+                Text="Size:"
+                DockPanel.Dock="Right"
+                VerticalAlignment="Center"
+                FontWeight="DemiBold"
+                FontSize="14" />
+        </DockPanel>
+    </Grid>
 </UserControl>
