--- a/Main/View/MainView.xaml
+++ b/Main/View/MainView.xaml
@@ -1,93 +1,183 @@
-﻿<Window x:Class="Main.MainView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:model="clr-namespace:Main.Model"
-        xmlns:viewmodel="clr-namespace:Main.ViewModel"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
-        Title="Visual Ternera - Main"
-        Height="720"
-        Width="1260">
-  <Window.Style>
-    <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}" />
-  </Window.Style>
+﻿<adonisControls:AdonisWindow
+    x:Class="Main.MainView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:Main.Model"
+    xmlns:viewmodel="clr-namespace:Main.ViewModel"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+    d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
+    mc:Ignorable="d"
+    Title="Visual Ternera - Main"
+    Height="640"
+    Width="1110">
+    <Window.Resources>
+        <model:DateTimeToBrushConverter
+            x:Key="DateColorConverter" />
+        <model:StatusToBrushConverter
+            x:Key="StatusColorConverter" />
+        <model:StatusToStringConverter
+            x:Key="StatusNameConverter" />
+    </Window.Resources>
 
-  <Window.Resources>
-    <model:DateTimeToBrushConverter x:Key="DateColorConverter" />
-    <model:StatusToBrushConverter x:Key="StatusColorConverter" />
-    <model:StatusToStringConverter x:Key="StatusNameConverter" />
-  </Window.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition
+                Width="*" />
+            <ColumnDefinition
+                Width="*" />
+        </Grid.ColumnDefinitions>
 
-  <Grid x:Name="RootGrid">
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*" />
-      <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
+        <Grid
+            Grid.Column="0"
+            Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="*" />
+            </Grid.RowDefinitions>
 
-    <Grid x:Name="ActionsGrid" Grid.Column="0" Margin="15">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="*" />
-      </Grid.RowDefinitions>
+            <TextBlock
+                Text="Visual Ternera"
+                Grid.Row="0"
+                FontWeight="DemiBold"
+                FontSize="26" />
 
-      <TextBlock Text="Acciones" Grid.Row="0" FontWeight="DemiBold" FontSize="26" />
+            <Border
+                Grid.Row="1"
+                Margin="15"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer3BackgroundBrush}}"
+                BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer3BorderBrush}}"
+                BorderThickness="3">
+                <ItemsControl
+                    VerticalAlignment="Stretch">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid
+                                Rows="3" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <Button
+                        Command="{Binding OpenEditor}"
+                        Content="{Binding EditorTitle}"
+                        Margin="15"
+                        FontWeight="DemiBold"
+                        FontSize="32" />
+                    <Button
+                        Command="{Binding OpenComparator}"
+                        Content="{Binding ComparatorTitle}"
+                        Margin="15"
+                        FontWeight="DemiBold"
+                        FontSize="32" />
+                    <Button
+                        Command="{Binding OpenCohere}"
+                        Content="{Binding CohereTitle}"
+                        Margin="15"
+                        FontWeight="DemiBold"
+                        FontSize="32" />
+                </ItemsControl>
+            </Border>
+        </Grid>
 
-      <ItemsControl Grid.Row="1" VerticalAlignment="Center">
-        <Button Command="{Binding OpenEditor}" Content="{Binding EditorTitle}" Margin="5" />
-        <Button Command="{Binding OpenComparator}" Content="{Binding ComparatorTitle}" Margin="5" />
-        <Button Command="{Binding OpenCohere}" Content="{Binding CohereTitle}" Margin="5" />
-      </ItemsControl>
+        <Border
+            Grid.Column="1"
+            BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
+            BorderThickness="2,0,0,0"
+            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer3BackgroundBrush}}" />
+
+        <Grid
+            x:Name="StateGrid"
+            Grid.Column="1"
+            Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="*" />
+                <RowDefinition
+                    Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Label
+                Content="Estado"
+                Grid.Row="0"
+                FontWeight="DemiBold"
+                FontSize="26" />
+
+            <StackPanel
+                Grid.Row="1"
+                Margin="15"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer2BackgroundBrush}}"
+                VerticalAlignment="Center">
+                <DataGrid
+                        ItemsSource="{Binding ClientsList}"
+                        AutoGenerateColumns="False"
+                        IsReadOnly="True"
+                        FontSize="16"
+                        ColumnWidth="*">
+                        <DataGrid.RowStyle>
+                            <Style
+                                TargetType="DataGridRow">
+                                <Setter
+                                    Property="FontWeight"
+                                    Value="Regular" />
+                                <Setter
+                                    Property="Background"
+                                    Value="{Binding UltimaConexion, Converter={StaticResource DateColorConverter}}" />
+                                <Setter
+                                    Property="Foreground"
+                                    Value="{Binding Estado, Converter={StaticResource StatusColorConverter}}" />
+                            </Style>
+                        </DataGrid.RowStyle>
+
+                        <DataGrid.Columns>
+                            <DataGridTextColumn
+                                Header="Cliente"
+                                Binding="{Binding Cliente}" />
+                            <DataGridTextColumn
+                                Header="Estado"
+                                Binding="{Binding Estado, Converter={StaticResource StatusNameConverter}}" />
+                            <DataGridTextColumn
+                                Header="Ultima Conexión"
+                                Binding="{Binding UltimaConexion}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <StackPanel
+                        Orientation="Horizontal"
+                        Margin="0,25,0,0">
+                        <Button
+                            Command="{Binding RefreshClients}"
+                            FontWeight="DemiBold"
+                            FontSize="14">Refrescar</Button>
+                        <TextBlock
+                            Margin="10"
+                            FontSize="14"
+                            Text="{Binding LastRefreshed, StringFormat='Ultimo análisis: hace \{0\} minutos'}" />
+                    </StackPanel>
+            </StackPanel>
+
+            <DockPanel
+                Grid.Row="2"
+                LastChildFill="False"
+                VerticalAlignment="Bottom">
+                <TextBlock
+                    DockPanel.Dock="Left"
+                    FontWeight="DemiBold"
+                    Text="{Binding Tag.Tag, StringFormat='Versión: \{0\}'}" />
+                <TextBlock
+                    DockPanel.Dock="Right">
+                    <Hyperlink
+                        RequestNavigate="Hyperlink_RequestNavigate"
+                        NavigateUri="https://github.com/runfo-sa/visual-ternera-servicio/commit/9a0e8d78e9b52eef7d1f50838ee7008cde2b0168">
+                        <TextBlock
+                            Text="{Binding Tag.Message}"
+                            FontWeight="DemiBold" />
+                    </Hyperlink>
+                </TextBlock>
+            </DockPanel>
+        </Grid>
     </Grid>
-
-    <Border Grid.Column="1" BorderBrush="White" BorderThickness="2,0,0,0" Background="{x:Null}" />
-
-    <Grid x:Name="StateGrid" Grid.Column="1" Margin="15">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="Auto" />
-      </Grid.RowDefinitions>
-
-      <Label Content="Estado" Grid.Row="0" FontWeight="DemiBold" FontSize="26" />
-
-      <StackPanel Grid.Row="1" Margin="0,45,0,45" VerticalAlignment="Center">
-        <DataGrid ItemsSource="{Binding ClientsList}"
-                          AutoGenerateColumns="False"
-                          VerticalAlignment="Center"
-                          IsReadOnly="True"
-                          ColumnWidth="*">
-          <DataGrid.RowStyle>
-            <Style TargetType="DataGridRow">
-              <Setter Property="FontWeight" Value="Bold" />
-              <Setter Property="Background" Value="{Binding UltimaConexion, Converter={StaticResource DateColorConverter}}" />
-              <Setter Property="Foreground" Value="{Binding Estado, Converter={StaticResource StatusColorConverter}}" />
-            </Style>
-          </DataGrid.RowStyle>
-
-          <DataGrid.Columns>
-            <DataGridTextColumn Header="Cliente" Binding="{Binding Cliente}" />
-            <DataGridTextColumn Header="Estado" Binding="{Binding Estado, Converter={StaticResource StatusNameConverter}}" />
-            <DataGridTextColumn Header="Ultima Conexión" Binding="{Binding UltimaConexion}" />
-          </DataGrid.Columns>
-        </DataGrid>
-
-        <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
-          <Button Command="{Binding RefreshClients}">Refrescar</Button>
-          <TextBlock Margin="10" Text="{Binding LastRefreshed, StringFormat='Ultimo análisis: hace \{0\} minutos'}" />
-        </StackPanel>
-      </StackPanel>
-
-      <DockPanel Grid.Row="2" LastChildFill="false" VerticalAlignment="Bottom">
-        <TextBlock DockPanel.Dock="Left" FontWeight="DemiBold" Text="{Binding Tag.Tag, StringFormat='Versión: \{0\}'}" />
-        <TextBlock DockPanel.Dock="Right">
-          <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"
-                NavigateUri="https://github.com/runfo-sa/visual-ternera-servicio/commit/9a0e8d78e9b52eef7d1f50838ee7008cde2b0168">
-            <TextBlock Text="{Binding Tag.Message}" FontWeight="DemiBold" />
-          </Hyperlink>
-        </TextBlock>
-      </DockPanel>
-    </Grid>
-  </Grid>
-</Window>
+</adonisControls:AdonisWindow>
