--- a/Comparator/View/Comparator.xaml
+++ b/Comparator/View/Comparator.xaml
@@ -1,13 +1,251 @@
-<UserControl x:Class="Comparator.Comparator"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Comparator"
-             mc:Ignorable="d"
-             Background="Beige"
-             d:DesignHeight="450" d:DesignWidth="800">
-  <Grid>
-    <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64">COMPARATOR</Label>
-  </Grid>
+<UserControl
+    x:Class="Comparator.Comparator"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:avalon="http://icsharpcode.net/sharpdevelop/avalonedit"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:viewmodel="clr-namespace:Comparator.ViewModel"
+    xmlns:core="clr-namespace:Core;assembly=Core"
+    d:DataContext="{d:DesignInstance Type=viewmodel:ComparatorViewModel}"
+    mc:Ignorable="d"
+    d:DesignHeight="450"
+    d:DesignWidth="800">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="Auto" />
+            <RowDefinition
+                Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid
+            Margin="15">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="Auto" />
+                <ColumnDefinition
+                    Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button
+                Command="{Binding AddComparation}"
+                Content="+" />
+
+            <StackPanel
+                Grid.Column="1"
+                Orientation="Horizontal"
+                HorizontalAlignment="Center">
+                <Button
+                    Command="{Binding SwitchToTextMode}"
+                    Content="Codigo">
+                    <Button.Style>
+                        <Style
+                            TargetType="{x:Type Button}"
+                            BasedOn="{StaticResource {x:Type Button}}">
+                            <Style.Triggers>
+                                <DataTrigger
+                                    Binding="{Binding TextMode}"
+                                    Value="True">
+                                    <Setter
+                                        Property="Background"
+                                        Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                <Button
+                    Command="{Binding SwitchToImageMode}"
+                    Content="Imagen">
+                    <Button.Style>
+                        <Style
+                            TargetType="{x:Type Button}"
+                            BasedOn="{StaticResource {x:Type Button}}">
+                            <Style.Triggers>
+                                <DataTrigger
+                                    Binding="{Binding ImageMode}"
+                                    Value="True">
+                                    <Setter
+                                        Property="Background"
+                                        Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </StackPanel>
+        </Grid>
+
+        <Grid
+            Visibility="{Binding TextModeVisibility}"
+            Margin="15,0,15,15"
+            Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="*" />
+                <ColumnDefinition
+                    Width="15" />
+                <ColumnDefinition
+                    Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                </Grid.RowDefinitions>
+
+                <Label
+                    Margin="5"
+                    FontSize="14"
+                    FontWeight="Regular"
+                    HorizontalAlignment="Left"
+                    Content="{Binding FirstFilename}" />
+                <avalon:TextEditor
+                    Loaded="firstTextEditor_Loaded"
+                    ScrollViewer.ScrollChanged="firstTextEditor_ScrollChanged"
+                    Grid.Row="1"
+                    x:Name="firstTextEditor"
+                    Visibility="{Binding TextMode}"
+                    IsReadOnly="True"
+                    SyntaxHighlighting="ZPL"
+                    ShowLineNumbers="True"
+                    WordWrap="True"
+                    FontSize="14"
+                    FontFamily="Cascadia Mono Regular"
+                    Foreground="#E5E9F0"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                    Document="{Binding FirstLabelText}" />
+            </Grid>
+
+            <Grid
+                Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                </Grid.RowDefinitions>
+
+                <Label
+                    Margin="5"
+                    FontSize="14"
+                    FontWeight="Regular"
+                    HorizontalAlignment="Left"
+                    Content="{Binding SecondFilename}" />
+                <avalon:TextEditor
+                    ScrollViewer.ScrollChanged="secondTextEditor_ScrollChanged"
+                    Grid.Row="1"
+                    x:Name="secondTextEditor"
+                    Visibility="{Binding TextMode}"
+                    IsReadOnly="True"
+                    SyntaxHighlighting="ZPL"
+                    ShowLineNumbers="True"
+                    WordWrap="True"
+                    FontSize="14"
+                    FontFamily="Cascadia Mono Regular"
+                    Foreground="#E5E9F0"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                    Document="{Binding SecondLabelText}" />
+            </Grid>
+        </Grid>
+
+        <Grid
+            Visibility="{Binding ImageModeVisibility}"
+            Margin="15,0,15,15"
+            Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="*" />
+                <ColumnDefinition
+                    Width="*" />
+                <ColumnDefinition
+                    Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                </Grid.RowDefinitions>
+                <Label
+                    Margin="5"
+                    FontSize="14"
+                    FontWeight="Regular"
+                    HorizontalAlignment="Left"
+                    Content="{Binding FirstFilename}" />
+                <core:ZoomBorder
+                    Grid.Row="1"
+                    ClipToBounds="True"
+                    Margin="5"
+                    BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                    BorderThickness="2">
+                    <Image
+                        Source="{Binding LeftImage}"
+                        SnapsToDevicePixels="True" />
+                </core:ZoomBorder>
+            </Grid>
+
+            <Grid
+                Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                </Grid.RowDefinitions>
+                <Label
+                    Margin="5"
+                    FontSize="14"
+                    FontWeight="Regular"
+                    HorizontalAlignment="Left"
+                    Content="Diferencia" />
+                <core:ZoomBorder
+                    Grid.Row="1"
+                    ClipToBounds="True"
+                    Margin="5"
+                    BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                    BorderThickness="2">
+                    <Image
+                        Source="{Binding CenterImage}"
+                        SnapsToDevicePixels="True" />
+                </core:ZoomBorder>
+            </Grid>
+
+            <Grid
+                Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                </Grid.RowDefinitions>
+                <Label
+                    Margin="5"
+                    FontSize="14"
+                    FontWeight="Regular"
+                    HorizontalAlignment="Left"
+                    Content="{Binding SecondFilename}" />
+                <core:ZoomBorder
+                    Grid.Row="1"
+                    ClipToBounds="True"
+                    Margin="5"
+                    BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                    BorderThickness="2">
+                    <Image
+                        Source="{Binding RightImage}"
+                        SnapsToDevicePixels="True" />
+                </core:ZoomBorder>
+            </Grid>
+        </Grid>
+    </Grid>
 </UserControl>
